fix(YALB-1594): update spacing

--- a/web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/pages/chat/Chat.module.css
+++ b/web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/pages/chat/Chat.module.css
@@ -74,7 +74,6 @@
     margin-top: 24px;
     justify-content: flex-end;
     background-color: #FFFFFF;
-    border-bottom: 1px solid #222;
 }
 
 .chatMessageUser {
@@ -151,17 +150,14 @@
     display: block;
     position: sticky;
     flex: 0 0 100px;
-    padding-top: 12px;
-    padding-bottom: 24px;
-    padding-left: 24px;
-    padding-right: 24px;
+    padding: 2rem;
     width: 100%;
     /* max-width: calc(100% - 100px); */
     /* max-width: 1028px; */
     /* margin-bottom: 50px; */
     margin-top: 8px;
     background-color: #F7F7F7;
-    min-height: 10rem;
+    border-top: 1px solid #222;
 }
 
 .clearChatBroom {
@@ -220,11 +216,9 @@
     align-items: center;
     padding: 1rem 2rem;
     gap: 4px;
-    position: absolute;
+    position: relative;
     width: 200px;
     height: 32px;
-    left: calc(50% - 161px/2 + 25.8px);
-    bottom: 116px;
     border: 1px solid hsl(0, 0%, 13%);
 }
 
